--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "semantic-ui-react": "^0.82.3",
     "spotify-web-api-js": "^0.24.0"
   },
   "scripts": {
