--- a/client/package.json
+++ b/client/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "bootstrap": "^4.1.3",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
-    "semantic-ui-react": "^0.82.3",
+    "reactstrap": "^6.4.0",
     "spotify-web-api-js": "^0.24.0"
   },
   "scripts": {
