--- a/client/package.json
+++ b/client/package.json
@@ -4,13 +4,16 @@
   "private": true,
   "dependencies": {
     "axios": "^0.18.0",
+    "babel-plugin-emotion": "^9.2.6",
     "bootstrap": "^4.1.3",
-    "font-awesome": "^4.7.0",
+    "emotion": "^9.2.6",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-emotion": "^9.2.6",
     "react-icons": "^3.0.5",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
+    "react-spinners": "^0.4.5",
     "reactstrap": "^6.4.0",
     "spotify-web-api-js": "^0.24.0"
   },
