--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.4",
     "react-spinners": "^0.4.5",
+    "react-transition-group": "^1.2.1",
     "reactstrap": "^6.4.0",
     "spotify-web-api-js": "^0.24.0"
   },
