--- a/package.json
+++ b/package.json
@@ -4,13 +4,16 @@
   "scripts": {
     "client": "cd client && yarn start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\""
+    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "start": "node server.js",
+    "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
   "dependencies": {
     "cookie-parser": "1.3.2",
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
+    "path": "^0.12.7",
     "querystring": "~0.2.0",
     "request": "~2.83.0",
     "x-ray": "^2.3.3"
