--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "spotify-playlist-creator",
   "version": "1.0.0",
   "scripts": {
-    "client": "cd client && yarn start",
+    "client": "cd client && npm start",
     "server": "nodemon server.js",
-    "dev": "concurrently --kill-others-on-fail \"yarn server\" \"yarn client\"",
+    "dev": "concurrently --kill-others-on-fail \"npm run server\" \"npm run client\"",
     "start": "node server.js",
     "heroku-postbuild": "cd client && npm install && npm install --only=dev --no-shrinkwrap && npm run build"
   },
@@ -13,9 +13,10 @@
     "cors": "^2.8.4",
     "dotenv": "^6.0.0",
     "express": "~4.16.0",
+    "node-schedule": "^1.3.0",
     "path": "^0.12.7",
     "querystring": "~0.2.0",
-    "request": "~2.83.0",
+    "request": "^2.83.0",
     "x-ray": "^2.3.3"
   },
   "devDependencies": {
