--- a/client/package.json
+++ b/client/package.json
@@ -7,6 +7,7 @@
     "babel-plugin-emotion": "^9.2.6",
     "bootstrap": "^4.1.3",
     "emotion": "^9.2.6",
+    "query-string": "^6.1.0",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
     "react-emotion": "^9.2.6",
