--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,7 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 
+/data
+
 # dependencies
 /node_modules
 /auth-server/node_modules
