--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,11 @@
     "reactstrap": "^6.4.0",
     "spotify-web-api-js": "^0.24.0"
   },
+  "devDependencies": {
+    "lodash": ">=4.17.11",
+    "webpack-dev-server": ">=3.1.11",
+    "merge": ">=1.2.1"
+  },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
