--- a/client/package.json
+++ b/client/package.json
@@ -16,7 +16,11 @@
     "react-scripts": "1.1.4",
     "react-spinners": "^0.4.5",
     "reactstrap": "^6.4.0",
-    "spotify-web-api-js": "^0.24.0"
+    "spotify-web-api-js": "^0.24.0",
+    "merge": ">=1.2.1"
+  },
+  "devDependencies": {
+    "merge": ">=1.2.1"
   },
   "scripts": {
     "start": "react-scripts start",
