--- a/client/package.json
+++ b/client/package.json
@@ -16,11 +16,12 @@
     "react-scripts": "1.1.4",
     "react-spinners": "^0.4.5",
     "reactstrap": "^6.4.0",
-    "spotify-web-api-js": "^0.24.0",
-    "merge": ">=1.2.1"
+    "spotify-web-api-js": "^0.24.0"
   },
   "devDependencies": {
-    "merge": ">=1.2.1"
+    "lodash": ">=4.17.11",
+    "merge": ">=1.2.1",
+    "webpack-dev-server": ">=3.1.11"
   },
   "scripts": {
     "start": "react-scripts start",
