--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "node-schedule": "^1.3.0",
     "path": "^0.12.7",
     "querystring": "~0.2.0",
-    "request": "^2.88.0",
-    "x-ray": "^2.3.3"
+    "request": "^2.88.0"
   },
   "devDependencies": {
     "concurrently": "^3.6.1"
